<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preferences_title"
        android:summary="Common event codes that are stored in log data for various task events"
        app:key="event_codes"
        app:title="Event Codes">

        <EditTextPreference
            app:defaultValue="@string/default_eventcode_correct_trial"
            app:key="@string/preftag_eventcode_correct_trial"
            app:title="Correct Trial" />

        <EditTextPreference
            app:defaultValue="@string/default_eventcode_error_trial"
            app:key="@string/preftag_eventcode_error_trial"
            app:title="Error Trial" />

        <EditTextPreference
            app:defaultValue="@string/default_eventcode_timeout_trial"
            app:key="@string/preftag_eventcode_timeout_trial"
            app:title="Idle Timeout" />

        <EditTextPreference
            app:defaultValue="@string/default_eventcode_wrong_gocue"
            app:key="@string/preftag_eventcode_wrong_gocue"
            app:title="Wrong Go Cue Pressed" />

        <EditTextPreference
            app:defaultValue="@string/default_eventcode_start_trial"
            app:key="@string/preftag_eventcode_start_trial"
            app:title="Start Trial" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
