<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preferences_title"
        app:key="@string/preftag_task_settings"
        app:title="Task Settings">

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_minrew"
            android:max="20000"
            app:key="@string/preftag_t_sc_minrew"
            app:min="200"
            app:summary=""
            app:title="Minimum Reward Duration (ms)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_maxrew"
            android:max="20000"
            app:key="@string/preftag_t_sc_maxrew"
            app:min="1"
            app:summary=""
            app:title="Maximum Reward Duration (ms)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_miniti"
            android:max="1000"
            app:key="@string/preftag_t_sc_miniti"
            app:min="1"
            app:summary="A random ITI between the minimum and maximum inter-reward interval will be chosen each time."
            app:title="Minimum Inter-Reward Interval (s)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_maxiti"
            android:max="1000"
            app:key="@string/preftag_t_sc_maxiti"
            app:min="1"
            app:summary="A random ITI between the minimum and maximum inter-reward interval will be chosen each time."
            app:title="Maximum Inter-Reward Interval (s)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_npn"
            android:max="20"
            app:key="@string/preftag_t_sc_npn"
            app:min="1"
            app:summary="The subject will need to press the cue this number of times to be rewarded."
            app:title="Presses Needed for Reward" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_npniti"
            android:max="20000"
            app:key="@string/preftag_t_sc_npniti"
            app:min="100"
            app:summary="If the number of presses needed for a reward is greater than 1, the cue will switch off for this duration in between each press."
            app:title="Inter-Press Interval (ms)" />

        <SwitchPreferenceCompat
            app:defaultValue="@bool/default_t_sc_stopsess"
            app:key="@string/preftag_t_sc_stopsess"
            app:summary="If enabled, the session will be halted after the specified length."
            app:title="End Session After Duration" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_sess_length"
            android:max="600"
            app:isPreferenceVisible="false"
            app:key="@string/preftag_t_sc_sess_length"
            app:min="1"
            app:summary="After this duration the task will shut off and no longer be accessible until restarted."
            app:title="Maximum Session Time (min)" />

        <SwitchPreferenceCompat
            app:defaultValue="@bool/default_t_sc_photo"
            app:key="@string/preftag_t_sc_photo"
            app:title="Take a Photo During Reward Deliveries" />

        <SwitchPreferenceCompat
            app:defaultValue="@bool/default_t_sc_togglecue"
            app:key="@string/preftag_t_sc_togglecue"
            app:title="Hide Cue During Reward Delivery and ITI" />

        <SwitchPreferenceCompat
            app:defaultValue="@bool/default_t_sc_alternatecue"
            app:key="@string/preftag_t_sc_alternatecue"
            app:summary="The cue will randomly alternate (with replacement) between two fixed positions."
            app:title="Randomly Alternate Cue Position" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preferences_title"
        app:title="Cue Settings">

        <ListPreference
            android:defaultValue="@integer/default_pr_shape"
            android:entries="@array/shapes"
            android:entryValues="@array/shapevalues"
            app:key="@string/preftag_t_sc_cue_shape"
            app:title="Cue Shape" />

        <ListPreference
            android:defaultValue="@integer/default_t_sc_cue_colour"
            android:entries="@array/colournames"
            android:entryValues="@array/colourvalues"
            app:key="@string/preftag_t_sc_cue_colour"
            app:title="Cue Colour" />

        <ListPreference
            android:defaultValue="@integer/default_t_sc_bordercolour"
            android:entries="@array/colournames"
            android:entryValues="@array/colourvalues"
            app:key="@string/preftag_t_sc_cue_border_colour"
            app:title="Cue Border Colour" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_cuewidth"
            android:max="2000"
            app:key="@string/preftag_t_sc_cuewidth"
            app:title="Cue Width (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_cueheight"
            android:max="2000"
            app:key="@string/preftag_t_sc_cueheight"
            app:title="Cue Height (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_t_sc_bordersize"
            android:max="80"
            app:key="@string/preftag_t_sc_bordersize"
            app:title="Border Thickness (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
            app:key="@string/preftag_t_sc_cuex"
            app:title="Cue X Position (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
            app:key="@string/preftag_t_sc_cuey"
            app:title="Cue Y Position (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
            app:key="@string/preftag_t_sc_cuextwo"
            app:title="Cue X position #2 (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
            app:key="@string/preftag_t_sc_cueytwo"
            app:title="Cue Y position #2 (pixels)" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
