<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preferences_title"
        app:key="@string/preftag_task_settings"
        app:title="Wald\'s Sequential Probability Ratio Task Settings">

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_numcues"
            android:max="4"
            app:key="@string/preftag_w_numcues"
            app:min="1"
            app:title="Number of Reward Cues Shown on Trial" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_numcuesused"
            android:max="10"
            app:key="@string/preftag_w_numcuesused"
            app:min="1"
            app:summary="Cues will be drawn from this number of possible cues, starting with the extreme probabilities (i.e. easiest cues) and working into the harder cues."
            app:title="Number of Reward Cues Used" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_startdelay"
            app:key="@string/preftag_w_startdelay"
            app:title="Time before First Reward Cue Shown (ms)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_probcuesdelay_low"
            app:key="@string/preftag_w_probcuesdelay_low"
            app:summary="The time between each reward cue being show will be a random number between the min and max values."
            app:title="Minimum Time between Reward Cues (ms)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_probcuesdelay_high"
            app:key="@string/preftag_w_probcuesdelay_high"
            app:title="Maximum Time between Reward Cues (ms)" />

        <SwitchPreferenceCompat
            app:defaultValue="@bool/default_w_randposchoicecues"
            app:key="@string/preftag_w_randposchoicecues"
            app:title="Randomly Position Choice Cues Along X-Axis" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preferences_title"
        app:key="@string/preftag_task_settings"
        app:title="Colours">

        <ListPreference
            android:defaultValue="@integer/default_w_colfix"
            android:entries="@array/colournames"
            android:entryValues="@array/colourvalues"
            app:key="@string/preftag_w_colfix"
            app:summary="The small central cue telling subjects when they can make their choice."
            app:title="Fixation Cue Colour" />

        <ListPreference
            android:defaultValue="@integer/default_w_colchone"
            android:entries="@array/colournames"
            android:entryValues="@array/colourvalues"
            app:key="@string/preftag_w_colchone"
            app:title="Choice Cue 1 Colour" />

        <ListPreference
            android:defaultValue="@integer/default_w_colchtwo"
            android:entries="@array/colournames"
            android:entryValues="@array/colourvalues"
            app:key="@string/preftag_w_colchtwo"
            app:title="Choice Cue 2 Colour" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preferences_title"
        app:key="@string/preftag_task_settings"
        app:title="Layout Settings">

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_gocuesize"
            android:max="500"
            app:key="@string/preftag_w_gocuesize"
            app:min="10"
            app:summary="The size of the circular cue in the centre of the screen."
            app:title="Go Cue Size (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_choicecuesize"
            android:max="500"
            app:key="@string/preftag_w_choicecuesize"
            app:min="10"
            app:title="Choice Cues Size" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_rewcuesize"
            android:max="500"
            app:key="@string/preftag_w_rewcuesize"
            app:min="10"
            app:title="Reward Cues Size" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_probcuexloc1"
            android:max="1500"
            app:key="@string/preftag_w_probcuexloc1"
            app:min="1"
            app:summary="Cues are randomly placed in one of four locations that align along X1, X2, Y1, Y2."
            app:title="X1 Location of Reward Cues" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_probcuexloc2"
            android:max="1500"
            app:key="@string/preftag_w_probcuexloc2"
            app:min="1"
            app:summary="Cues are randomly placed in one of four locations that align along X1, X2, Y1, Y2."
            app:title="X2 Location of Reward Cues" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_probcueyloc1"
            android:max="2000"
            app:key="@string/preftag_w_probcueyloc1"
            app:min="1"
            app:summary="Cues are randomly placed in one of four locations that align along X1, X2, Y1, Y2."
            app:title="Y1 Location of Reward Cues" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_probcueyloc2"
            android:max="2000"
            app:key="@string/preftag_w_probcueyloc2"
            app:min="1"
            app:summary="Cues are randomly placed in one of four locations that align along X1, X2, Y1, Y2."
            app:title="Y2 Location of Reward Cues" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_choicecuex1"
            android:max="1500"
            app:key="@string/preftag_w_choicecuex1"
            app:min="1"
            app:title="X Location of Choice Cue 1" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_choicecuey1"
            android:max="2000"
            app:key="@string/preftag_w_choicecuey1"
            app:min="1"
            app:title="Y Location of Choice Cue 1" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_choicecuex2"
            android:max="1500"
            app:key="@string/preftag_w_choicecuex2"
            app:min="1"
            app:title="X Location of Choice Cue 2" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_w_choicecuey2"
            android:max="2000"
            app:key="@string/preftag_w_choicecuey2"
            app:min="1"
            app:title="Y Location of Choice Cue 2" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
