<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preferences_title"
        app:key="@string/preftag_task_settings"
        app:title="Object Discrimination Task Settings">

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_od_num_distractors"
            android:max="3"
            app:key="@string/preftag_od_num_distractors"
            app:min="1"
            app:title="Number of Distractors to Present" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_od_duration_on"
            app:key="@string/preftag_od_duration_on"
            app:title="Duration to Show Cue (ms)" />

        <mymou.preferences.SeekBarPreferenceCustom
            android:defaultValue="@integer/default_od_duration_off"
            app:key="@string/preftag_od_duration_off"
            app:title="Wait Time Until Choice (ms)" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
